--- a/package.json
+++ b/package.json
@@ -3,25 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "bootstrap": "^5.2.3",
+    "cxs": "^6.2.0",
+    "next": "^13.2.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-device-detect": "^1.13.1",
-    "react-dom": "^16.13.1",
-    "react-html-parser": "^2.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "browserslist": {
     "production": [
@@ -34,5 +29,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.35.0",
+    "eslint-config-next": "13.2.3"
   }
 }
