--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@payloadcms/next-payload": "^0.0.27",
     "bootstrap": "^5.2.3",
     "next": "^13.2.4",
+    "payload": "^1.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-device-detect": "^1.13.1",
