--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/(pages)/archive/page.js"  ],
   "exclude": [
     "node_modules"
   ]
