--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@payloadcms/next-payload": "^0.0.35",
+    "@payloadcms/next-payload": "^0.0.27",
     "bootstrap": "^5.2.3",
     "next": "^13.4.19",
-    "payload": "^1.15.1",
+    "payload": "^1.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-device-detect": "^1.13.1",
@@ -34,6 +34,8 @@
     ]
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
+    "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "eslint-config-next": "13.2.3"
   }
