--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@payloadcms/next-payload": "^0.0.27",
+    "@payloadcms/next-payload": "^0.0.35",
     "bootstrap": "^5.2.3",
     "next": "^13.4.19",
-    "payload": "^1.9.2",
+    "payload": "1.11.x",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-device-detect": "^1.13.1",
