--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@payloadcms/next-payload": "^0.0.27",
+    "@vercel/analytics": "^1.3.1",
     "bootstrap": "^5.2.3",
     "next": "^13.4.19",
     "payload": "1.10.x",
