--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@payloadcms/next-payload": "^0.0.27",
-    "@vercel/analytics": "^1.3.1",
-    "bootstrap": "^5.2.3",
-    "next": "^13.4.19",
-    "payload": "1.10.x",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-device-detect": "^1.13.1",
-    "react-dom": "^18.2.0",
-    "react-html-parser": "^2.0.2",
-    "react-tooltip": "^5.10.1"
+    "@payloadcms/db-mongodb": "^3.0.0-beta.77",
+    "@payloadcms/next": "^3.0.0-beta.77",
+    "@payloadcms/plugin-cloud": "^3.0.0-beta.77",
+    "@payloadcms/richtext-slate": "^3.0.0-beta.77",
+    "graphql": "^16.9.0",
+    "next": "^15.0.0-rc.0",
+    "payload": "^3.0.0-beta.77",
+    "react": "^19.0.0-rc-8269d55d-20240802",
+    "react-dom": "^19.0.0-rc-8269d55d-20240802"
   },
   "scripts": {
     "dev": "next dev",
@@ -38,6 +36,7 @@
     "@next/bundle-analyzer": "^13.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
-    "eslint-config-next": "13.2.3"
+    "eslint-config-next": "13.2.3",
+    "typescript": "5.5.4"
   }
 }
