mui integration, layout

--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
+    "@mui/material-nextjs": "^5.16.6",
     "@payloadcms/db-mongodb": "^3.0.0-beta.77",
     "@payloadcms/next": "^3.0.0-beta.77",
     "@payloadcms/plugin-cloud": "^3.0.0-beta.77",
     "@payloadcms/richtext-slate": "^3.0.0-beta.77",
+    "escape-html": "^1.0.3",
     "graphql": "^16.9.0",
     "next": "^15.0.0-rc.0",
     "payload": "^3.0.0-beta.77",
